apps/workloads/automation/kestra/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kestra-route
  namespace: automation
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "kestra.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kestra-webserver
          port: 8080
